[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Hud.gd" type="Script" id=1]
[ext_resource path="res://Assets/BlueKeyDisable_Hud.png" type="Texture" id=2]
[ext_resource path="res://Assets/BlueKey_Hud.png" type="Texture" id=3]
[ext_resource path="res://Assets/RedKeyDisable_Hud.png" type="Texture" id=4]
[ext_resource path="res://Assets/RedKey_Hud.png" type="Texture" id=5]
[ext_resource path="res://Assets/LevelComplete_Hud.png" type="Texture" id=6]
[ext_resource path="res://Assets/GameOver.png" type="Texture" id=7]

[node name="Hud" type="CanvasLayer" index="0"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Keys" type="Control" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="BlueKeysTotal0" type="TextureRect" parent="Keys" index="0"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 938.0
margin_top = 16.0
margin_right = 948.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeysTotal1" type="TextureRect" parent="Keys" index="1"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 908.0
margin_top = 16.0
margin_right = 918.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="BlueKeysTotal2" type="TextureRect" parent="Keys" index="2"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 878.0
margin_top = 16.0
margin_right = 888.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeysTotal3" type="TextureRect" parent="Keys" index="3"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 848.0
margin_top = 16.0
margin_right = 858.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeysTotal4" type="TextureRect" parent="Keys" index="4"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 818.0
margin_top = 16.0
margin_right = 828.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeysTotal5" type="TextureRect" parent="Keys" index="5"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 788.0
margin_top = 16.0
margin_right = 798.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeysTotal6" type="TextureRect" parent="Keys" index="6"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 758.0
margin_top = 16.0
margin_right = 768.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeysTotal7" type="TextureRect" parent="Keys" index="7"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 728.0
margin_top = 16.0
margin_right = 738.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeysTotal8" type="TextureRect" parent="Keys" index="8"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 698.0
margin_top = 16.0
margin_right = 708.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeysTotal9" type="TextureRect" parent="Keys" index="9"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 668.0
margin_top = 16.0
margin_right = 678.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="BlueKeys0" type="TextureRect" parent="Keys" index="10"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 938.0
margin_top = 16.0
margin_right = 948.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys1" type="TextureRect" parent="Keys" index="11"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 908.0
margin_top = 16.0
margin_right = 918.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys2" type="TextureRect" parent="Keys" index="12"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 878.0
margin_top = 16.0
margin_right = 888.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys3" type="TextureRect" parent="Keys" index="13"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 848.0
margin_top = 16.0
margin_right = 858.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys4" type="TextureRect" parent="Keys" index="14"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 818.0
margin_top = 16.0
margin_right = 828.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys5" type="TextureRect" parent="Keys" index="15"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 788.0
margin_top = 16.0
margin_right = 798.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys6" type="TextureRect" parent="Keys" index="16"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 758.0
margin_top = 16.0
margin_right = 768.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys7" type="TextureRect" parent="Keys" index="17"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 728.0
margin_top = 16.0
margin_right = 738.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys8" type="TextureRect" parent="Keys" index="18"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 698.0
margin_top = 16.0
margin_right = 708.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="BlueKeys9" type="TextureRect" parent="Keys" index="19"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 668.0
margin_top = 16.0
margin_right = 678.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="RedKeysTotal0" type="TextureRect" parent="Keys" index="20"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 938.0
margin_top = 64.0
margin_right = 948.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal1" type="TextureRect" parent="Keys" index="21"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 908.0
margin_top = 64.0
margin_right = 918.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal2" type="TextureRect" parent="Keys" index="22"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 878.0
margin_top = 64.0
margin_right = 888.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal3" type="TextureRect" parent="Keys" index="23"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 848.0
margin_top = 64.0
margin_right = 858.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal4" type="TextureRect" parent="Keys" index="24"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 818.0
margin_top = 64.0
margin_right = 828.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal5" type="TextureRect" parent="Keys" index="25"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 788.0
margin_top = 64.0
margin_right = 798.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal6" type="TextureRect" parent="Keys" index="26"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 758.0
margin_top = 64.0
margin_right = 768.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal7" type="TextureRect" parent="Keys" index="27"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 728.0
margin_top = 64.0
margin_right = 738.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal8" type="TextureRect" parent="Keys" index="28"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 698.0
margin_top = 64.0
margin_right = 708.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeysTotal9" type="TextureRect" parent="Keys" index="29"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 668.0
margin_top = 64.0
margin_right = 678.0
margin_bottom = 81.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="RedKeys0" type="TextureRect" parent="Keys" index="30"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 938.0
margin_top = 64.0
margin_right = 948.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys1" type="TextureRect" parent="Keys" index="31"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 908.0
margin_top = 64.0
margin_right = 918.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys2" type="TextureRect" parent="Keys" index="32"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 878.0
margin_top = 64.0
margin_right = 888.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys3" type="TextureRect" parent="Keys" index="33"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 848.0
margin_top = 64.0
margin_right = 858.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys4" type="TextureRect" parent="Keys" index="34"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 818.0
margin_top = 64.0
margin_right = 828.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys5" type="TextureRect" parent="Keys" index="35"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 788.0
margin_top = 64.0
margin_right = 798.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys6" type="TextureRect" parent="Keys" index="36"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 758.0
margin_top = 64.0
margin_right = 768.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys7" type="TextureRect" parent="Keys" index="37"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 728.0
margin_top = 64.0
margin_right = 738.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys8" type="TextureRect" parent="Keys" index="38"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 698.0
margin_top = 64.0
margin_right = 708.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="RedKeys9" type="TextureRect" parent="Keys" index="39"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 668.0
margin_top = 64.0
margin_right = 678.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="Collectables" type="Control" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="0" type="TextureRect" parent="Collectables" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0

[node name="Score" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Score: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors" ]

[node name="LevelCompleteMessage" type="Label" parent="." index="3"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = 80.0
margin_right = 100.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Press Space to go to Next Level
Press Esc to Quit"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="LevelCompleteScore" type="Label" parent="." index="4"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = 60.0
margin_right = 100.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Score:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="LevelCompleteText" type="TextureRect" parent="." index="5"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect" ]

[node name="LevelCompleteRect" type="ColorRect" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 10000.0
margin_bottom = 10000.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.523438, 0.523438, 0.523438, 0.254118 )
_sections_unfolded = [ "Rect" ]

[node name="GameOverMessage" type="Label" parent="." index="7"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = 83.0
margin_right = 71.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Press Space to Restart
Press Esc to Quit"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="GameOverText" type="TextureRect" parent="." index="8"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -40.0
margin_right = 70.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect" ]

[node name="GameOverRect" type="ColorRect" parent="." index="9"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 10000.0
margin_bottom = 10000.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.523438, 0.523438, 0.523438, 0.254118 )
_sections_unfolded = [ "Rect" ]


